@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added contacts method to return BOTH rows.
 
 0.01      2015-06-10 16:13:01 -0600
   - initial version
